--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           '" />',
       )
     </script>
-    <title>unibest</title>
+    <title>衣设 - 线上服装商城</title>
     <!--preload-links-->
     <!--app-context-->
   </head>
